--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&display=swap');
 
 *,
 *:before,
@@ -9,4 +9,8 @@
 
 html {
    font-size: 62.5%;
+}
+
+body {
+   margin-top: 7.5rem;
 }
