--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@900&display=swap');
 
 *,
 *:before,
@@ -12,5 +14,5 @@ html {
 }
 
 body {
-   margin-top: 7.5rem;
+   margin-top: 7.4rem;
 }
